fixed align for lead price, added format for balance

--- a/frontend/src/containers/Checkout/Checkout.scss
+++ b/frontend/src/containers/Checkout/Checkout.scss
@@ -29,7 +29,7 @@
     }
 
     .d-lead_price {
-      text-align: right;
+      text-align: left;
     }
 
     tbody tr:nth-child(even) {
